--- a/color.css
+++ b/color.css
@@ -78,3 +78,13 @@ button:hover {
 	color: #fff;
 	background-color: steelblue;
 }
+
+.footer {
+	color: #D9D9D9;
+	max-width: 100%;
+	text-align: center;
+	font-weight: normal;
+	font-size: 30%;
+	text-transform: uppercase;
+	margin-top: 200px;
+}
